--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <title>Portfolio-2</title>
+    <title>Experiment-1</title>
   </head>
   <body>
     <div class="nav-container">
       <ul class="nav">
         <i class="ri-menu-4-line"></i>
-        <li><h1>sdn</h1></li>
+        <li><h1>ums</h1></li>
       </ul>
     </div>
     <div class="button-container">
-      <button>Learn More <div></div></button>
+      <button>Click Me<div></div></button>
     </div>
     <canvas class="webgl"></canvas>
     <script type="module" src="/main.js"></script>
